<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/title_bar"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/base_dimen_80"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/shangping"
                        android:layout_width="@dimen/base_dimen_180"
                        android:layout_height="@dimen/base_dimen_180"
                        android:src="@drawable/shangpinguanli"
                        android:tag="M_Good" />

                    <TextView
                        android:id="@+id/tv_shangpin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/base_dimen_16"
                        android:text="@string/title_shangpinguanli"
                        android:textColor="@color/word_color"
                        android:textSize="@dimen/base_dimen_28" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/base_dimen_160"
                    android:orientation="vertical"

                    >

                    <ImageView
                        android:id="@+id/img_cuxiao"
                        android:layout_width="@dimen/base_dimen_180"
                        android:layout_height="@dimen/base_dimen_180"
                        android:src="@drawable/cuxiaoguanli"
                        android:tag="M_SALE" />

                    <TextView
                        android:id="@+id/tv_cuxiao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/base_dimen_16"
                        android:text="@string/title_cxgl"
                        android:textColor="@color/word_color"
                        android:textSize="@dimen/base_dimen_28" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/base_dimen_50"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/kaquan"
                        android:layout_width="@dimen/base_dimen_180"
                        android:layout_height="@dimen/base_dimen_180"
                        android:src="@drawable/kaquan"
                        android:tag="M_Coupon" />

                    <TextView
                        android:id="@+id/tv_kaquan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/base_dimen_16"
                        android:text="@string/title_kqgl"
                        android:textColor="@color/word_color"
                        android:textSize="@dimen/base_dimen_28" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/base_dimen_160"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/huodong"
                        android:layout_width="@dimen/base_dimen_180"
                        android:layout_height="@dimen/base_dimen_180"
                        android:src="@drawable/huodong"
                        android:tag="M_Event" />

                    <TextView
                        android:id="@+id/tv_huodong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/base_dimen_16"
                        android:text="@string/title_hdgl"
                        android:textColor="@color/word_color"
                        android:textSize="@dimen/base_dimen_28" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/base_dimen_50"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/xiaofei"
                        android:layout_width="@dimen/base_dimen_180"
                        android:layout_height="@dimen/base_dimen_180"
                        android:src="@drawable/xiaofeijiesuan"
                        android:tag="M_Consume" />

                    <TextView
                        android:id="@+id/tv_xiaofei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/base_dimen_16"
                        android:text="@string/title_xfjs"
                        android:textColor="@color/word_color"
                        android:textSize="@dimen/base_dimen_28" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/base_dimen_160"
                    android:orientation="vertical"

                    >

                    <ImageView
                        android:id="@+id/jingying"
                        android:layout_width="@dimen/base_dimen_180"
                        android:layout_height="@dimen/base_dimen_180"
                        android:src="@drawable/jingyingfenxi"
                        android:tag="M_Operate" />

                    <TextView
                        android:id="@+id/tv_jingying"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/base_dimen_16"
                        android:text="@string/title_jyfx"
                        android:textColor="@color/word_color"
                        android:textSize="@dimen/base_dimen_28" />

                </LinearLayout>

            </LinearLayout>

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center_horizontal">-->

            <!--<Button-->
            <!--android:id="@+id/btn_mdgl"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/title_mdgl"/>-->
            <!--</LinearLayout>-->

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_dimen_1"
            android:background="@color/word_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/under_color"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/base_dimen_10"
            android:paddingTop="@dimen/base_dimen_10">

            <LinearLayout
                android:id="@+id/linear_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/base_dimen_10"
                android:paddingRight="@dimen/base_dimen_10">

                <ImageView
                    android:id="@+id/iv_one"
                    android:layout_width="@dimen/base_dimen_60"
                    android:layout_height="@dimen/base_dimen_60"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:src="@drawable/main_selected" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_dimen_10"
                    android:text="@string/title_xtsy"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/base_dimen_24" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_store"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.5"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/base_dimen_10"
                android:paddingRight="@dimen/base_dimen_10"
                android:tag="M_Store">

                <ImageView
                    android:layout_width="@dimen/base_dimen_60"
                    android:layout_height="@dimen/base_dimen_60"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_store_selected" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_dimen_10"
                    android:text="@string/title_mdgl"
                    android:textColor="@drawable/selector_main_text"
                    android:textSize="@dimen/base_dimen_24" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.5"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/base_dimen_20"
                android:paddingRight="@dimen/base_dimen_20"
                android:tag="M_Vip">

                <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="@dimen/base_dimen_60"
                    android:layout_height="@dimen/base_dimen_60"
                    android:src="@drawable/icon_huiyuan_selected" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_dimen_10"
                    android:text="@string/title_hygl"
                    android:textColor="@drawable/selector_main_text"
                    android:textSize="@dimen/base_dimen_24" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_lianmeng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.5"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/base_dimen_20"
                android:paddingRight="@dimen/base_dimen_20"
                android:tag="M_UserDing">

                <ImageView
                    android:layout_width="@dimen/base_dimen_60"
                    android:layout_height="@dimen/base_dimen_60"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_lianmeng_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_dimen_10"
                    android:text="@string/title_sjlm"
                    android:textColor="@drawable/selector_main_text"
                    android:textSize="@dimen/base_dimen_24" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.5"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/base_dimen_20"
                android:paddingRight="@dimen/base_dimen_20"
                android:tag="M_UserDing">

                <ImageView
                    android:layout_width="@dimen/base_dimen_60"
                    android:layout_height="@dimen/base_dimen_60"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_dingzhi_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_dimen_10"
                    android:text="@string/title_yhdz"
                    android:textColor="@drawable/selector_main_text"
                    android:textSize="@dimen/base_dimen_24" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.5"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/base_dimen_20"
                android:paddingRight="@dimen/base_dimen_20"
                android:tag="M_Message"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_four"
                    android:layout_width="@dimen/base_dimen_60"
                    android:layout_height="@dimen/base_dimen_60"
                    android:layout_gravity="center"
                    android:src="@drawable/xiaoxi" />

                <TextView
                    android:id="@+id/tv_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_dimen_10"
                    android:text="@string/title_xxgl"
                    android:textColor="@color/word_color"
                    android:textSize="@dimen/base_dimen_24" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>